fixed footer wrapping

--- a/_sass/3-modules/_footer.sass
+++ b/_sass/3-modules/_footer.sass
@@ -5,16 +5,16 @@
 
   .lockup
     padding: 50px 30px
-
+    +clearfix
     .logo
       float: left
       margin-right: 30px
       path
         fill: $gray
-    //
-    // .content-wrap
-    //   float: left
-    //
+
+    .content-wrap
+      float: left
+
     .copyright
       text-transform: uppercase
       font-size: 12px
